--- a/account-details/account-details.component.html
+++ b/account-details/account-details.component.html
@@ -64,4 +64,10 @@
       <input type="number" [(ngModel)]="transactionAmount" class="transaction-input">
 
       <button (click)="addTransaction()">Ajouter</button>
-    </div>
+    
+    
+      <div class="chart-container">
+        <canvas id="transactionChart"></canvas>
+      </div>
+      
+    
