--- a/register/register.component.html
+++ b/register/register.component.html
@@ -28,11 +28,18 @@
                 <mat-error *ngIf="cin.errors?.['pattern'] && cin.touched">Le numéro de carte d'identité tunisienne doit être composé de 8 chiffres.</mat-error>
               </mat-form-field>
               
-  
               <mat-form-field appearance="fill">
-                <input matInput placeholder="Adresse" name="adresse" #adresse="ngModel" ngModel required>
-                <mat-error *ngIf="adresse.errors?.['required'] && adresse.touched">Le champ adresse est obligatoire.</mat-error>
+                <mat-label>Région</mat-label>
+                <select matNativeControl name="region" #region="ngModel" ngModel required>
+                  <option value="" disabled selected>Choisissez la région</option>
+                  <option value="Tunis">Tunis</option>
+                  <option value="Ariana">Ariana</option>
+                  <option value="Ben Arous">Ben Arous</option>
+                  <!-- Ajoutez d'autres options pour les régions de la Tunisie -->
+                </select>
+                <mat-error *ngIf="region.errors?.['required'] && region.touched">Veuillez choisir une région.</mat-error>
               </mat-form-field>
+              
   
               <mat-form-field appearance="fill">
                 <mat-label>Choisissez le type de compte :</mat-label>
