--- a/espace-admin/demande-carte/demande-carte.component.html
+++ b/espace-admin/demande-carte/demande-carte.component.html
@@ -1,4 +1,8 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="btn btn-primary ps-4">
+  <input matInput placeholder="Filtrer par CIN" [(ngModel)]="filterValue" (keyup)="applyFilter()">
+</div>
+
+<table mat-table [dataSource]="dataSource" class="mat-table">
   <ng-container matColumnDef="email">
     <th mat-header-cell *matHeaderCellDef>Email</th>
     <td mat-cell *matCellDef="let demande">{{ demande.email }}</td>
@@ -9,9 +13,10 @@
     <td mat-cell *matCellDef="let demande">{{ demande.cin }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="rib">
-    <th mat-header-cell *matHeaderCellDef>RIB</th>
-    <td mat-cell *matCellDef="let demande">{{ demande.rib }}</td>
+ 
+  <ng-container matColumnDef="accountType">
+    <th mat-header-cell *matHeaderCellDef>Account Type</th>
+    <td mat-cell *matCellDef="let demande">{{ demande.accountType }}</td>
   </ng-container>
 
   <ng-container matColumnDef="cardType">
@@ -19,17 +24,13 @@
     <td mat-cell *matCellDef="let demande">{{ demande.cardType }}</td>
   </ng-container>
 
+ 
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let demande">
-      <div class="button-container">
-        <button mat-icon-button class="accept-button" (click)="accepterDemande(demande)">
-          <mat-icon>check</mat-icon>
-        </button>
-        <button mat-icon-button class="refuse-button" (click)="refuserDemande(demande)">
-          <mat-icon>clear</mat-icon>
-        </button>
-      </div>
+      <button mat-button color="primary" (click)="accepterDemande(demande)" [disabled]="demande.statut === 'Demande acceptée'">Accepter</button>
+<button mat-button color="warn" (click)="refuserDemande(demande)" [disabled]="demande.statut !== 'Demande acceptée'">Refuser</button>
+
     </td>
   </ng-container>
 
@@ -38,6 +39,9 @@
     <td mat-cell *matCellDef="let demande">{{ demande.statut }}</td>
   </ng-container>
 
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
+<canvas id="userRequestChart"  ></canvas>
+
