--- a/espace-admin/demande-cheque/demande-cheque.component.html
+++ b/espace-admin/demande-cheque/demande-cheque.component.html
@@ -1,4 +1,8 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="btn btn-primary ps-4">
+  <input matInput placeholder="Filtrer par CIN" [(ngModel)]="filterValue" (keyup)="applyFilter()">
+</div>
+<div></div>
+<table mat-table [dataSource]="dataSource" class="mat-table">
   <ng-container matColumnDef="email">
     <th mat-header-cell *matHeaderCellDef>Email</th>
     <td mat-cell *matCellDef="let demande">{{ demande.email }}</td>
@@ -9,27 +13,22 @@
     <td mat-cell *matCellDef="let demande">{{ demande.nombreChequier }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="rib">
-    <th mat-header-cell *matHeaderCellDef>RIB</th>
-    <td mat-cell *matCellDef="let demande">{{ demande.rib }}</td>
-  </ng-container>
+
 
   <ng-container matColumnDef="cin">
     <th mat-header-cell *matHeaderCellDef>CIN</th>
     <td mat-cell *matCellDef="let demande">{{ demande.cin }}</td>
   </ng-container>
 
+ 
+  
+ 
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>Action</th>
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let demande">
-      <div class="button-container">
-        <button mat-icon-button class="accept-button" (click)="accepterDemande(demande)">
-          <mat-icon>check</mat-icon>
-        </button>
-        <button mat-icon-button class="refuse-button" (click)="refuserDemande(demande)">
-          <mat-icon>clear</mat-icon>
-        </button>
-      </div>
+      <button mat-button color="primary" (click)="accepterDemande(demande)" [disabled]="demande.statut === 'Demande acceptée'">Accepter</button>
+<button mat-button color="warn" (click)="refuserDemande(demande)" [disabled]="demande.statut !== 'Demande acceptée'">Refuser</button>
+
     </td>
   </ng-container>
   
@@ -45,3 +44,6 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<div class="chart-container">
+  <canvas id="userRequestChart"  ></canvas>
+</div>
